--- a/app/views/president/detalles/index.html
+++ b/app/views/president/detalles/index.html
@@ -107,7 +107,7 @@
 														    	</div>
 														    	<div class="col-md-9 col-sm-9 text-center" style="border-left: 1px solid #E6DFDD">
 														    		<br>
-														    		<a href="#" class="btn btn-primary btn-sm btn-block">Calificar</a>
+														    		<a href="#" class="btn btn-primary btn-sm btn-block" onclick="return calificar(<%- autoEval[i].evaluacion.fecha_f.getDate() %>, <%- autoEval[i].evaluacion.fecha_f.getMonth() %>);">Calificar</a>
 														    	</div>
 															</div>
 															<hr style="margin-bottom: 1px">
@@ -147,7 +147,7 @@
 														    	</div>
 														    	<div class="col-md-6 col-sm-6 text-center" style="border-left: 1px solid #E6DFDD; border-right: 1px solid #E6DFDD">
 														    		----------------->
-														    		<a href="#" class="btn btn-primary btn-sm btn-block">Calificar</a>
+														    		<a href="#" class="btn btn-primary btn-sm btn-block" onclick="return calificar(<%- coEval[j].evaluacion.fecha_f.getDate() %>, <%- coEval[j].evaluacion.fecha_f.getMonth() %>);">Calificar</a>
 														    	</div>
 														    	<div class="col-md-3 col-sm-3 text-center">
 													    			<div class="row">
@@ -173,94 +173,104 @@
 								</div>
 
 								<div class="col-md-6">
-									<div class="card">
-										<div class="card-header" style="background: #383938; color: white">
-											<p><strong>Eval a Subordinado</strong></p>
-										</div>
-										<div class="card-body">
-											<% for(let k = 0; k < evalJefe.length; k ++) {%>
-												<%if(evalJefe[k].evaluacion.instrumentId == 2) {%>
-													<div class="row">
-														<div class="col-md-3 col-sm-3 text-center">
-											    			<div class="row">
-											    				<div class="col-md-12">
-											    					<h4>foto</h4>
-											    				</div>
-											    		
-												    			<div class="col-md-12">
-												    				<p style="font-size: 10pt"><%- evalJefe[k].usuarioCedula %></p>
-												    			</div>
-												    		</div>
-												    	</div>
-												    	<div class="col-md-6 col-sm-6 text-center" style="border-left: 1px solid #E6DFDD; border-right: 1px solid #E6DFDD">
-												    		----------------->
-												    		<a href="#" class="btn btn-primary btn-sm btn-block">Calificar</a>
-												    	</div>
-												    	<div class="col-md-3 col-sm-3 text-center">
-											    			<div class="row">
-											    				<div class="col-md-12">
-											    					<h4>foto</h4>
-											    				</div>
-											    		
-												    			<div class="col-md-12">
-												    				<p style="font-size: 10pt"><%- evalJefe[k].usuarioEvaluado %></p>
-												    			</div>
-												    		</div>
-												    	</div>
-													</div>
-													<hr style="margin-bottom: 1px">
-												<%}%>
-											<%}%>
+									<div class="accordion" id="accordionExample">
+										<div class="card">
+											<div class="card-header" id="headingOne" style="background: #383938; color: white">
+												<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseTres" aria-expanded="true" aria-controls="collapseTres" style="color: white">
+										        	Eval Subordinado
+										        </button>
+											</div>
+											<div id="collapseTres" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+												<div class="card-body">
+													<% for(let k = 0; k < evalJefe.length; k ++) {%>
+														<%if(evalJefe[k].evaluacion.instrumentId == 2) {%>
+															<div class="row">
+																<div class="col-md-3 col-sm-3 text-center">
+													    			<div class="row">
+													    				<div class="col-md-12">
+													    					<h4>foto</h4>
+													    				</div>
+													    		
+														    			<div class="col-md-12">
+														    				<p style="font-size: 10pt"><%- evalJefe[k].usuarioCedula %></p>
+														    			</div>
+														    		</div>
+														    	</div>
+														    	<div class="col-md-6 col-sm-6 text-center" style="border-left: 1px solid #E6DFDD; border-right: 1px solid #E6DFDD">
+														    		----------------->
+														    		<a href="#" class="btn btn-primary btn-sm btn-block">Calificar</a>
+														    	</div>
+														    	<div class="col-md-3 col-sm-3 text-center">
+													    			<div class="row">
+													    				<div class="col-md-12">
+													    					<h4>foto</h4>
+													    				</div>
+													    		
+														    			<div class="col-md-12">
+														    				<p style="font-size: 10pt"><%- evalJefe[k].usuarioEvaluado %></p>
+														    			</div>
+														    		</div>
+														    	</div>
+															</div>
+															<hr style="margin-bottom: 1px">
+														<%}%>
+													<%}%>
+												</div>
+											</div>
 										</div>
 									</div>
 									<br>
 								</div>
 
 								<div class="col-md-6">
-									<div class="card">
-										<div class="card-header" style="background: #1FA5C6; color: white">
-											<p><strong>Eval a Jefe</strong></p>
-										</div>
-										<div class="card-body">
-											<% for(let l = 0; l < evalSubor.length; l ++) {%>
-												<%if(evalSubor[l].evaluacion.instrumentId == 1) {%>
-													<div class="row">
-														<div class="col-md-3 col-sm-3 text-center">
-											    			<div class="row">
-											    				<div class="col-md-12">
-											    					<h4>foto</h4>
-											    				</div>
-											    		
-												    			<div class="col-md-12">
-												    				<p style="font-size: 10pt"><%- evalSubor[l].usuarioCedula %></p>
-												    			</div>
-												    		</div>
-												    	</div>
-												    	<div class="col-md-6 col-sm-6 text-center" style="border-left: 1px solid #E6DFDD; border-right: 1px solid #E6DFDD">
-												    		----------------->
-												    		<a href="#" class="btn btn-primary btn-sm btn-block">Calificar</a>
-												    	</div>
-												    	<div class="col-md-3 col-sm-3 text-center">
-											    			<div class="row">
-											    				<div class="col-md-12">
-											    					<h4>foto</h4>
-											    				</div>
-											    		
-												    			<div class="col-md-12">
-												    				<p style="font-size: 10pt"><%- evalSubor[l].usuarioEvaluado %></p>
-												    			</div>
-												    		</div>
-												    	</div>
-													</div>
-													<hr style="margin-bottom: 1px">
-												<%}%>
-											<%}%>
+									<div class="accordion" id="accordionExample">
+										<div class="card">
+											<div class="card-header" id="headingOne" style="background: #1FA5C6; color: white">
+												<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseCuatro" aria-expanded="true" aria-controls="collapseCuatro" style="color: white">
+											        Eval Jefe
+											    </button>
+											</div>
+											<div id="collapseCuatro" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+												<div class="card-body">
+													<% for(let l = 0; l < evalSubor.length; l ++) {%>
+														<%if(evalSubor[l].evaluacion.instrumentId == 1) {%>
+															<div class="row">
+																<div class="col-md-3 col-sm-3 text-center">
+													    			<div class="row">
+													    				<div class="col-md-12">
+													    					<h4>foto</h4>
+													    				</div>
+													    		
+														    			<div class="col-md-12">
+														    				<p style="font-size: 10pt"><%- evalSubor[l].usuarioCedula %></p>
+														    			</div>
+														    		</div>
+														    	</div>
+														    	<div class="col-md-6 col-sm-6 text-center" style="border-left: 1px solid #E6DFDD; border-right: 1px solid #E6DFDD">
+														    		----------------->
+														    		<a href="#" class="btn btn-primary btn-sm btn-block">Calificar</a>
+														    	</div>
+														    	<div class="col-md-3 col-sm-3 text-center">
+													    			<div class="row">
+													    				<div class="col-md-12">
+													    					<h4>foto</h4>
+													    				</div>
+													    		
+														    			<div class="col-md-12">
+														    				<p style="font-size: 10pt"><%- evalSubor[l].usuarioEvaluado %></p>
+														    			</div>
+														    		</div>
+														    	</div>
+															</div>
+															<hr style="margin-bottom: 1px">
+														<%}%>
+													<%}%>
+												</div>
+											</div>
 										</div>
 									</div>
 									<br>
-								</div>
-
-								
+								</div>	
 							</div>
 						</div>
 					</div>		
@@ -281,5 +291,6 @@
 		<script src="/js/bootstrap.min.js"></script>
 		<script src="/js/jquery.validate.min.js"></script>
 		<script src="/js/main.js"></script>
+		<script src="/js/misFunciones.js"></script>
 	</body>
 </html>
