--- a/app/views/president/detalles/autoEval/index.html
+++ b/app/views/president/detalles/autoEval/index.html
@@ -1,81 +1,137 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8">
-		<title>CREDIUDO | Presidente</title>
+<head>
+	<meta charset="UTF-8">
+	<title>CREDIUDO | Presidente</title>
 
-		<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<script type="text/javascript" src="/js/pace.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="/css/pace-theme-center-circle.css">
+	<!-- Pie de Pagina -->
+    	<link href="/css/sticky-footer-navbar.css" rel="stylesheet">	
+	<!-- Custom styles for this template -->
+    <link href="css/sticky-footer-navbar.css" rel="stylesheet">
+</head>
+<body>
+	<div class="jumbotron" style="margin-bottom: 0px; padding: 0">
+		<img src="/images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
+	</div>	
 
-		<style type="text/css">
-			table, th, td {
-			    border: 1px solid black;
-			}
-		</style>
-	</head>
-	<body>
-		<div class="container">
-			<div class="jumbotron" style="margin-bottom: 0px; padding: 0">
-				<img src="/images/index/banner-sistema.jpg" alt="Responsive image" class="img-fluid">
-			</div>	
+	<%- include('../../../partials/president/navbar.html') %>
 
-			<%- include('../../..//partials/president/navbar.html') %>
+	<div class="container-fluid">
+		<div class="row justify-content-md-center">
+			<div class="col-md-10">
+				<div class="row">
+					<div class="col-md-12">
+						<!--=======MIGAS DE PAN=========-->
+						<nav aria-label="breadcrumb" style="margin-top: 1%">
+							<ol class="breadcrumb">
+							    <li class="breadcrumb-item" aria-current="page"><a href="/president">Home</a></li>
+							    <li class="breadcrumb-item" aria-current="page"><a href="/president/detalles/<%-dataEvaluacion.evaluacionId%>">Detalles</a></li>
+							    <li class="breadcrumb-item active" aria-current="page">autoEval</li>
+							</ol>
+						</nav>
+						<!--=======FIN MIGAS DE PAN=========-->		
+					</div>
+				</div>
 
-			<!--=======MIGAS DE PAN=========-->
-			<nav aria-label="breadcrumb" style="margin-top: 1%">
-				<ol class="breadcrumb">
-				    <li class="breadcrumb-item active" aria-current="page">Home</li>
-				    <li class="breadcrumb-item active" aria-current="page">Auto-Evaluación</li>
-				</ol>
-			</nav>
-			<!--=======FIN MIGAS DE PAN=========-->
+				<div class="row">
+					<div class="col-md-3">
+						<div class="card">
+						  	<div class="card-header">
+						    	Datos Personales:
+						  	</div>
+						  
+						  	<div class="card-body">
+						    	<div class="form-group">
+						    		<p><b>Nombre: </b><%- user.nombre %></p>
+						    		<p><b>Apellido: </b><%- user.apellido %></p>
+						    		<p><b>Nucleo: </b><%- user.nucleoCodigo %></p>
+						    		<p><b>Unidad: </b><%- user.unidadCodigo %></p>
+						    	</div>
+						  	</div>
+						</div>
 
-			<div class="row">
-				<div class="col-md-3">
-					<div class="card">
-					  	<div class="card-header">
-					    	Datos Personales:
-					  	</div>
-					  
-					  	<div class="card-body">
-					    	<div class="form-group">
-					    		<p><b>Nombre: </b></p>
-					    		<p><b>Apellido: </b></p>
-					    		<p><b>Nucleo: </b></p>
-					    		<p><b>Unidad: </b></p>
-					    	</div>
-					  	</div>
+						<br>
 					</div>
 
-					<br>
-				</div>
-
-				<div class="col-md-9">
-					<% for(let i = 0; i < Evaluacion.length; i ++) {%>
-						<% if(Evaluacion[i].instrument.tipoEvalId == 1) {%>
-							<h3><%= Evaluacion[i].nucleo.nombre %> - <%= Evaluacion[i].unidad.nombre %></h3>
-
+					<div class="col-md-9">
+						<div class="row">
+							<div class="col-md-12">
+								<div class="card">
+									<div class="card-body">
+										<h3>AutoEvaluación</h3>
+										<hr>
+										<p><strong>Nombre y Apellido: </strong><%-Evaluado.nombre%> <%-Evaluado.apellido%></p>
+										<p><strong>Cedula de Identidad: </strong><%-Evaluado.cedula%></p>
+										<p><strong>Nucleo: </strong><%-Evaluado.nucleo.nombre%></p>
+										<p><strong>Unidad: </strong><%-Evaluado.unidad.nombre%></p>
+									</div>
+								</div>
+								<br>	
+							</div>
 							
-						<%} else {%>
-							<h2>No Hay Auto-Evaluaciones Programadas</h2>
-						<%}%>
-					<%}%>
-				</div>
+							<div class="col-md-12">
+								<div class="card">
+									<div class="card-body">
+										<table style="width:100%">
+											<tr>
+												<th style="width: 40%">Factor</th>
+												<th>Calificación</th>
+											</tr>
+											<% for(let i = 0; i < Factor.length; i++) {%>
+												<tr>
+													<td><%- Factor[i].factor.nombre %></td>
+													<td style="padding: 5px">
+														<div class="progress">
+														  	<div class="progress-bar" role="progressbar" style="width: <%= calificacionFactor[i] * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b><%= calificacionFactor[i] %> Ptos</b></div>
+														</div>
+													</td>	
+												</tr>
+											<%}%>
+										</table>
+									</div>
+								</div>
+								<br>
+							</div>
+							
+							<div class="col-md-12">
+								<div class="card">
+									<div class="card-body">
+										<table style="width: 100%">
+											<tr>
+												<td style="width: 40%"><h2>Calificación General: </h2></td>
+												<td>
+													<div class="progress">
+														<div class="progress-bar" role="progressbar" style="width: <%= dataEvaluacion.calificacion * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= dataEvaluacion.calificacion %> Ptos</b></div>
+													</div>
+												</td>
+											</tr>
+										</table>
+									</div>
+								</div>
+							</div>
+						</div>
+						<br>
+					</div>
+				</div>		
 			</div>
-			
-			<br><br>
-
-			<footer class="footer" style="background: #BEBCB0">
-				<div class="container">
-					<span class="text-muted">Pie de Pagina</span>
-				</div>
-			</footer>
 		</div>
+	</div>
 
-		<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-		<script src="js/bootstrap.min.js"></script>
-		<script src="/js/jquery.validate.min.js"></script>
-		<script src="/js/main.js"></script>
-	</body>
+	<footer class="footer" style="background: #BEBCB0;">
+		<div class="container">
+			<span class="text-muted">Pie de Pagina</span>
+		</div>
+	</footer>
+
+	<script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+	<script src="/js/bootstrap.min.js"></script>
+	<script src="/js/jquery.validate.min.js"></script>
+	<script src="/js/main.js"></script>
+
+</body>
 </html>
