--- a/app/views/president/detalles/index.html
+++ b/app/views/president/detalles/index.html
@@ -97,11 +97,17 @@
 																<div class="col-md-3 col-sm-3 text-center">
 													    			<div class="row">
 													    				<div class="col-md-12">
-													    					<h4>foto</h4>
+													    					<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-user-circle-o" style="font-size: 30pt;"></i>
 													    				</div>
 													    		
 														    			<div class="col-md-12">
-														    				<p style="font-size: 10pt"><%- autoEval[i].usuarioCedula %></p>
+														    				<p style="font-size: 10pt">
+														    					<% for(let j = 0; j < dataUser.length; j ++) {%>
+														    						<% if(dataUser[j].cedula == autoEval[i].usuarioCedula) {%>
+														    							<%- dataUser[j].nombre %> <%- dataUser[j].apellido %>
+														    						<%}%>
+														    					<%}%>
+														    				</p>
 														    			</div>
 														    		</div>
 														    	</div>
@@ -130,8 +136,8 @@
 											</div>
 											<div id="collapseDos" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
 												<div class="card-body">
-													<% for(let j = 0; j < coEval.length; j ++) {%>
-														<%if(coEval[j].evaluacion.instrumentId == 3) {%>
+													<% for(let l = 0; l < coEval.length; l ++) {%>
+														<%if(coEval[l].evaluacion.instrumentId == 3) {%>
 															<div class="row">
 																<div class="col-md-3 col-sm-3 text-center">
 													    			<div class="row">
@@ -141,13 +147,19 @@
 													    				</div>
 													    		
 														    			<div class="col-md-12">
-														    				<p style="font-size: 10pt"><%- coEval[j].usuarioCedula %></p>
+														    				<p style="font-size: 10pt">
+														    					<% for(let k = 0; k < dataUser.length; k ++) {%>
+														    						<% if(dataUser[k].cedula == coEval[l].usuarioCedula) {%>
+														    							<%- dataUser[k].nombre %> <%- dataUser[k].apellido %>
+														    						<%}%>
+														    					<%}%>
+														    				</p>
 														    			</div>
 														    		</div>
 														    	</div>
 														    	<div class="col-md-6 col-sm-6 text-center" style="border-left: 1px solid #E6DFDD; border-right: 1px solid #E6DFDD">
 														    		----------------->
-														    		<a href="#" class="btn btn-primary btn-sm btn-block" onclick="return calificar(<%- coEval[j].evaluacion.fecha_f.getDate() %>, <%- coEval[j].evaluacion.fecha_f.getMonth() %>);">Ver</a>
+														    		<a href="#" class="btn btn-primary btn-sm btn-block" onclick="return calificar(<%- coEval[l].evaluacion.fecha_f.getDate() %>, <%- coEval[l].evaluacion.fecha_f.getMonth() %>);">Ver</a>
 														    	</div>
 														    	<div class="col-md-3 col-sm-3 text-center">
 													    			<div class="row">
@@ -157,7 +169,13 @@
 													    				</div>
 													    		
 														    			<div class="col-md-12">
-														    				<p style="font-size: 10pt"><%- coEval[j].usuarioEvaluado %></p>
+														    				<p style="font-size: 10pt">
+														    					<% for(let k = 0; k < dataUser.length; k ++) {%>
+														    						<% if(dataUser[k].cedula == coEval[l].usuarioEvaluado) {%>
+														    							<%- dataUser[k].nombre %> <%- dataUser[k].apellido %>
+														    						<%}%>
+														    					<%}%>
+														    				</p>
 														    			</div>
 														    		</div>
 														    	</div>
@@ -188,11 +206,18 @@
 																<div class="col-md-3 col-sm-3 text-center">
 													    			<div class="row">
 													    				<div class="col-md-12">
-													    					<h4>foto</h4>
+													    					<br>
+													    					<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-user-circle-o" style="font-size: 30pt;"></i>
 													    				</div>
 													    		
 														    			<div class="col-md-12">
-														    				<p style="font-size: 10pt"><%- evalJefe[k].usuarioCedula %></p>
+														    				<p>
+															    				<% for(let j = 0; j < dataUser.length; j ++) {%>
+															    					<% if(dataUser[j].cedula == evalJefe[k].usuarioCedula) {%>
+															    						<%- dataUser[j].nombre %> <%- dataUser[j].apellido %>
+															    					<%}%>
+															    				<%}%>
+														    				</p>
 														    			</div>
 														    		</div>
 														    	</div>
@@ -203,11 +228,18 @@
 														    	<div class="col-md-3 col-sm-3 text-center">
 													    			<div class="row">
 													    				<div class="col-md-12">
-													    					<h4>foto</h4>
+													    					<br>
+													    					<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-user-circle-o" style="font-size: 30pt;"></i>
 													    				</div>
 													    		
 														    			<div class="col-md-12">
-														    				<p style="font-size: 10pt"><%- evalJefe[k].usuarioEvaluado %></p>
+														    				<p>
+															    				<% for(let j = 0; j < dataUser.length; j ++) {%>
+															    					<% if(dataUser[j].cedula == evalJefe[k].usuarioEvaluado) {%>
+															    						<%- dataUser[j].nombre %> <%- dataUser[j].apellido %>
+															    					<%}%>
+															    				<%}%>
+														    				</p>
 														    			</div>
 														    		</div>
 														    	</div>
@@ -238,11 +270,18 @@
 																<div class="col-md-3 col-sm-3 text-center">
 													    			<div class="row">
 													    				<div class="col-md-12">
-													    					<h4>foto</h4>
+													    					<br>
+													    					<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-user-circle-o" style="font-size: 30pt;"></i>
 													    				</div>
 													    		
 														    			<div class="col-md-12">
-														    				<p style="font-size: 10pt"><%- evalSubor[l].usuarioCedula %></p>
+														    				<p>
+															    				<% for(let j = 0; j < dataUser.length; j ++) {%>
+																    				<% if(dataUser[j].cedula == evalSubor[l].usuarioCedula) {%>
+																    					<%- dataUser[j].nombre %> <%- dataUser[j].apellido %>
+																    				<%}%>
+																    			<%}%>
+															    			</p>
 														    			</div>
 														    		</div>
 														    	</div>
@@ -253,11 +292,18 @@
 														    	<div class="col-md-3 col-sm-3 text-center">
 													    			<div class="row">
 													    				<div class="col-md-12">
-													    					<h4>foto</h4>
+													    					<br>
+													    					<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-user-circle-o" style="font-size: 30pt;"></i>
 													    				</div>
 													    		
 														    			<div class="col-md-12">
-														    				<p style="font-size: 10pt"><%- evalSubor[l].usuarioEvaluado %></p>
+														    				<p>
+														    					<% for(let j = 0; j < dataUser.length; j ++) {%>
+																    				<% if(dataUser[j].cedula == evalSubor[l].usuarioEvaluado) {%>
+																    					<%- dataUser[j].nombre %> <%- dataUser[j].apellido %>
+																    				<%}%>
+																    			<%}%>
+														    				</p>
 														    			</div>
 														    		</div>
 														    	</div>
