Renderizando Vista para las coEvaluaciones

--- a/app/views/president/detalles/index.html
+++ b/app/views/president/detalles/index.html
@@ -159,7 +159,7 @@
 														    	</div>
 														    	<div class="col-md-6 col-sm-6 text-center" style="border-left: 1px solid #E6DFDD; border-right: 1px solid #E6DFDD">
 														    		----------------->
-														    		<a href="#" class="btn btn-primary btn-sm btn-block" onclick="return calificar(<%- coEval[l].evaluacion.fecha_f.getDate() %>, <%- coEval[l].evaluacion.fecha_f.getMonth() %>);">Ver</a>
+														    		<a href="/president/detalles/<%- coEval[l].evaluacionId %>/vercoEval/<%- coEval[l].usuarioEvaluado %>/<%- coEval[l].usuarioCedula %>" class="btn btn-primary btn-sm btn-block" onclick="return verificar(<%- coEval[l].status %>);">Ver</a>
 														    	</div>
 														    	<div class="col-md-3 col-sm-3 text-center">
 													    			<div class="row">
