Arreglando la asignacion de instrumentos para los jefes y los subordinados

--- a/app/views/president/detalles/index.html
+++ b/app/views/president/detalles/index.html
@@ -223,7 +223,7 @@
 														    	</div>
 														    	<div class="col-md-6 col-sm-6 text-center" style="border-left: 1px solid #E6DFDD; border-right: 1px solid #E6DFDD">
 														    		----------------->
-														    		<a href="#" class="btn btn-primary btn-sm btn-block">Ver</a>
+														    		<a href="/president/detalles/<%- evalJefe[k].evaluacionId %>/verEvalSubor/<%- evalJefe[k].usuarioEvaluado %>/<%- evalJefe[k].usuarioCedula %>" class="btn btn-primary btn-sm btn-block">Ver</a>
 														    	</div>
 														    	<div class="col-md-3 col-sm-3 text-center">
 													    			<div class="row">
