detalles de todos los tipo de eval listo

--- a/app/views/president/detalles/index.html
+++ b/app/views/president/detalles/index.html
@@ -86,7 +86,7 @@
 										<div class="card">
 											<div class="card-header" id="headingOne">
 												<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-										        	AutoEvaluacón
+										        	AutoEvaluación
 										        </button>
 											</div>
 											<div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
@@ -131,7 +131,7 @@
 										<div class="card">
 											<div class="card-header" id="headingOne">
 												<button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseDos" aria-expanded="true" aria-controls="collapseDos">
-										        	CoEvaluacón
+										        	CoEvaluación
 										        </button>
 											</div>
 											<div id="collapseDos" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
@@ -287,7 +287,7 @@
 														    	</div>
 														    	<div class="col-md-6 col-sm-6 text-center" style="border-left: 1px solid #E6DFDD; border-right: 1px solid #E6DFDD">
 														    		----------------->
-														    		<a href="#" class="btn btn-primary btn-sm btn-block">Ver</a>
+														    		<a href="/president/detalles/<%- evalJefe[l].evaluacionId %>/verEvalJefe/<%- evalJefe[l].usuarioCedula %>/<%- evalJefe[l].usuarioEvaluado %>" class="btn btn-primary btn-sm btn-block" onclick="return verificar(<%- evalJefe[l].status %>);">Ver</a>
 														    	</div>
 														    	<div class="col-md-3 col-sm-3 text-center">
 													    			<div class="row">
