--- a/app/views/president/detalles/personal/calificacion.html
+++ b/app/views/president/detalles/personal/calificacion.html
@@ -91,30 +91,78 @@
 											<hr>
 											<div>
 												<div class="row">
-													<% for(let i = 0; i < dataEvaluacion.length; i ++) {%>
+													<!--Si el Usuario selccionado tiene cargo 3 (Subordinado)-->
+													<% if(User.cargoId == 3) {%>
 														<div class="col-md-12">
 															<div class="card">
 																<div class="card-body">
-																	<table style="width: 100%">
-																		<tr>
-																			<td style="width: 40%">
-																				<% if(dataEvaluacion[i].evaluacion.instrumentId == 1) {%>
-																					<h3>Segun Jefe: </h3>
-																				<%} else if(dataEvaluacion[i].evaluacion.instrumentId == 3){%>
-																					<h3>Segun Compañeros: </h3>
-																				<%} else if(dataEvaluacion[i].evaluacion.instrumentId == 4){%>
-																					<h3>Segun Él Mismo: </h3>
-																				<%} else if(dataEvaluacion[i].evaluacion.instrumentId == 2){%>
-																					<h3>Segun Subordinados: </h3>
-																				<%}%>
-																			</td>
-																			<td>
-																				<div class="progress">
-																					<div class="progress-bar" role="progressbar" style="width: <%= dataEvaluacion[i].calificacion * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= dataEvaluacion[i].calificacion %> Ptos</b></div>
+																	<div class="row">
+																		<div class="col-lg-3 col-md-4 col-sm-3">
+																			<div class="card">
+																				<div class="card-body text-center">
+																					<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-child" style="font-size: 30pt;"></i>
+																					<hr style="margin: 1px">
+																					<p><strong>AutoEvaluación</strong></p>
 																				</div>
-																			</td>
-																		</tr>
-																	</table>
+																			</div>
+																		</div>
+																		<div class="col-lg-9 col-md-8 col-sm-9 text-center">
+																			<br><br>
+																			<div class="progress">
+																				<div class="progress-bar" role="progressbar" style="width: <%= autoEval.calificacion * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= autoEval.calificacion %> Ptos</b></div>
+																			</div>
+																		</div>					
+																	</div>
+																</div>
+															</div>
+															<br>
+														</div>
+
+														<div class="col-md-12">
+															<div class="card">
+																<div class="card-body">
+																	<div class="row">
+																		<div class="col-lg-3 col-md-4 col-sm-3">
+																			<div class="card">
+																				<div class="card-body text-center">
+																					<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-users" style="font-size: 30pt;"></i>
+																					<hr style="margin: 2px">
+																					<p><strong>CoEvaluación</strong></p>
+																				</div>
+																			</div>
+																		</div>
+																		<div class="col-lg-9 col-md-8 col-sm-9 text-center">
+																			<br><br>
+																			<div class="progress">
+																				<div class="progress-bar" role="progressbar" style="width: <%= calificacion * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= calificacion %> Ptos</b></div>
+																			</div>
+																		</div>					
+																	</div>
+																</div>
+															</div>
+															<br>
+														</div>
+
+														<div class="col-md-12">
+															<div class="card">
+																<div class="card-body">
+																	<div class="row">
+																		<div class="col-lg-3 col-md-4 col-sm-3">
+																			<div class="card">
+																				<div class="card-body text-center">
+																					<span class="glyphicon glyphicon-log-in"></span><i class="fa fa-user-secret" style="font-size: 30pt;"></i>
+																					<hr style="margin: 1px">
+																					<p><strong>Segun Jefe</strong></p>
+																				</div>
+																			</div>
+																		</div>
+																		<div class="col-lg-9 col-md-8 col-sm-9 text-center">
+																			<br><br>
+																			<div class="progress">
+																				<div class="progress-bar" role="progressbar" style="width: <%= evaldJefe.calificacion * 10 %>%;" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"><b> <%= evaldJefe.calificacion %> Ptos</b></div>
+																			</div>
+																		</div>					
+																	</div>
 																</div>
 															</div>
 															<br>
